--- a/index.html
+++ b/index.html
@@ -2,23 +2,19 @@
 
 <html lang="en">
 <head>
-  <!-- <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,minimum-scale=1">
--->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
  
-  <meta name="description" content="side nav from supercharged">
+  <meta name="description" content="Front-End Nanodegree project no. 5">
   <meta name="author" content="Morlac">
   
   <meta name="theme-color" content="#FF00FF">
 
-  <title>xSide Navbar</title>
+  <title>Neighborhood map project</title>
 
   <!-- Bootstrap core CSS -->
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="style.css">
@@ -32,16 +28,55 @@
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->           
     <script src="bower_components/jquery/dist/jquery.min.js"></script> 
 
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <!-- knockout (MVVM framework) -->
-    <script src="bower_components/knockout/dist/knockout.js"></script>
+  <!-- knockout (MVVM framework) -->
+  <script src="bower_components/knockout/dist/knockout.js"></script>
 
-  
- 
+  <aside class="side-nav">
+    <div class="side-nav_container">
+      <div class="side-nav_header">
+        <input id="input-search" type="text" placeholder="search" class="form-control",  data-bind="textInput: searchString">
+      </div>
+      <div class="side-nav_content" data-bind="foreach: viewModel.locations">
+        <button type="button" class="btn btn-default btn-location" data-bind="text: title, style: { display: show() ? '' : 'none'}, event: { click: $parent.locationButton_onClick }"></button>
+      </div>
+    </div>
+  </aside>
 
-  <script type="text/javascript" src="side-nav.js"></script>
+  <aside id="location-info-ID" class="location-info">
+    <div class="location-info_content" data-bind="style: { display: viewModel.currLocation() !== null ? '' : 'none'}">
+      <div class="location-info_content_flickr-img">
+        <button class="js-info-toggle-btn location-info_hide-toggle material-icons" data-bind="event: { click: hideLocationInfo }">close</button>
+        <img id="flickr-img" src="" alt="">
+      </div>
+      <div id="content-wiki-ID" class="location-info_content_wiki"></div>
+    </div>
+  </aside>
+
+  <section>
+    <div class="section-content">
+      <div id="main__container">
+        <div class="map_container">
+          <div id="map" class="map_canvas"></div>
+        </div>
+      </div>
+    </section>
+  </div>
+<!-- 
+  <section id="main">
+    <div class="section-content">
+      <div class="container">
+        <div class="map-container">
+          <div id="map" class="map_canvas"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  -->
+
+  <!-- <script type="text/javascript" src="side-nav.js"></script> -->
   <script type="text/javascript" src="app.js"></script>
 
   <!--<script src="app.js"></script> -->
