feat:	Add README file. Refactor code. Push repo to GitHub.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
   </aside>
 
-  <aside id="location-info-ID" class="location-info">
+  <aside id="location-info-ID" class="location-info hide">
     <div class="location-info_content" data-bind="style: { display: viewModel.currLocation() !== null ? '' : 'none'}">
       <div class="location-info_content_flickr-img">
         <button class="js-info-toggle-btn location-info_hide-toggle material-icons" data-bind="event: { click: hideLocationInfo }">close</button>
